--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:unit": "wp-scripts test-unit-js"
   },
   "dependencies": {
-    "color": "^3.1.2"
+    "color": "^3.1.2",
+    "npm-check-updates": "^16.14.20"
   },
   "devDependencies": {
     "@wordpress/scripts": "^24.6.0"
